@@ -4,6 +4,8 @@
 	* Add support for reading C-state info via sysfs
 	  (Kevin Hilman, Venki Pallipadi)
 	* Show USB suspend statistics of USB devices in "-d" dump mode
+	* Show USB suspend statistics as a low priority hint for busy
+	devices
 	* Add support for using the sysfs power supply class
 	  (Donnie Berkholz)
  	* Fix USB suspend suggestion to take semi blacklisted stuff into
